--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,17 @@ cache:
   directories:
     - node_modules
 
-before_script:
+deploy:
+  provider: pages
+  skip_cleanup: true
+  github_token: $GITHUB_TOKEN  # Set in the settings page of your repository, as a secure variable
+  keep_history: true
+  on:
+    branch: master
+
+script:
+  - yarn test
+  - yarn build
 
 notifications:
   email: false
