--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "react-template",
-  "version": "0.0.1",
+  "name": "route-planner",
+  "version": "0.1.0",
   "private": true,
+  "homepage": "https://morewings.github.io/route-planner/",
   "dependencies": {
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
