--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "npm run lint && react-scripts test --env=jsdom",
+    "test": "yarn lint && react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "fix": "eslint --fix ./src/",
     "lint": "eslint ./src/"
