--- a/.eslintrc
+++ b/.eslintrc
@@ -7,29 +7,33 @@
     "prettier/react"
   ],
   "rules": {
-    "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
+    "react/jsx-filename-extension": [1, {"extensions": [".js", ".jsx"]}],
     "react/jsx-props-no-spreading": 0,
     "react/no-array-index-key": 1,
     "import/prefer-default-export": 0,
-    "import/no-unresolved": 0,
-    "no-confusing-arrow": "error",
     "object-curly-spacing": ["error", "never"],
     "arrow-body-style": ["warn", "as-needed"],
     "prettier/prettier": ["warn"],
-    "import/extensions": 0,
-    "fp/no-delete": 1,
-    "fp/no-let": "warn",
-    "fp/no-loops": 1,
-    "fp/no-mutating-assign": 1,
-    "fp/no-mutating-methods": 1,
-    "no-underscore-dangle": [2, { "allow": ["__"] }], // fix Ramda placeholder `R.__`
-    "no-shadow": 0,
-    "jsx-a11y/href-no-hash": "off",
-    "jsx-a11y/anchor-is-valid": ["warn", { "aspects": ["invalidHref"] }],
+    "jsx-a11y/anchor-is-valid": ["warn", {"aspects": ["invalidHref"]}],
+    "jsx-a11y/click-events-have-key-events": "off",
     "react/destructuring-assignment": "off",
-    "react/self-closing-comp": "warn",
     "react/jsx-fragments": "off",
-    "jsx-a11y/click-events-have-key-events": "off"
+    "fp/no-delete": "warn",
+    "fp/no-mutating-assign": "warn",
+    "fp/no-mutating-methods": [
+      "warn",
+      {
+        "allowedObjects": ["_", "R"]
+      }
+    ],
+    "fp/no-mutation": [
+      "warn",
+      {
+        "commonjs": true,
+        "allowThis": true,
+        "exceptions": [{"property": "propTypes"}, {"property": "defaultProps"}]
+      }
+    ]
   },
   "plugins": [
     "prettier",
