--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
     "react-scripts": "^3.3.0",
-    "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0"
+    "redux": "^4.0.5"
   },
   "devDependencies": {
     "eslint-config-airbnb": "^18.0.1",
