--- a/renovate.json
+++ b/renovate.json
@@ -5,7 +5,9 @@
   "packageRules": [
     {
       "updateTypes": ["minor", "patch", "pin", "digest"],
-      "automerge": "branch"
+      "automerge": true
     }
-  ]
+  ],
+  "rangeStrategy": "replace",
+  "automergeType": "branch"
 }
